# ipatool-worker

./: .gitignore  .npmrc  Cargo.toml  Dockerfile  README.md  REFACTOR_SUMMARY.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js  wrangler.toml
.github/workflows/: ci.yml  docker.yml  release.yml
.learnings/: LEARNINGS.md
docs/: README.zh-CN.md  design-system-contract.md
docs/learnings/: ERRORS.md
docs/plans/: 2026-04-23-community-archive-v1.md
docs/workflows/: pr-validator.yml  rebuild-index.yml
frontend/: App.vue  config.js  eslint.config.js  index.html  postcss.config.js  style.css  tailwind.config.js  tokens.css  vite.config.js
frontend/components/: AccountChip.vue  AccountManager.vue  AccountSelector.vue  AppArtwork.vue  AppSearchBar.vue  Appearance.vue  AppearanceShell.vue  ArchiveApp.vue  ArchiveAppCard.vue  ArchiveFavoriteVersionItem.vue  ArchiveItemCard.css  ArchivePublishDialog.vue  ArchiveSegmentTabs.vue  ArchiveShell.vue  ArchiveVersionSelectSheet.vue  ChangePassword.vue  DownloadManager.vue  DownloadShell.vue  DownloadVersionSheet.vue  IpaActiveTaskCard.vue  IpaActiveTasksSection.vue  IpaArtifactCard.vue  IpaArtifactsSection.vue  IpaManager.vue  IpaQueueEmptyState.vue  Login.vue  ManualVersionDialog.vue  MobileBadge.vue  MobileButton.vue  MobileCard.vue  (+19 more)
ipa-wasm/: Cargo.toml
ipa-wasm/src/: ipa_utils.rs  lib.rs  ota_install.rs  signature.rs
ipa-wasm/tests/: stress.rs
scripts/: check-no-hardcoded-colors.sh  cleanup-empty-job-dirs.sh  deploy.sh  install.sh  mobile-download-regression.cjs  sync-version.sh  test-ota.sh
server/: Cargo.toml  rustfmt.toml
server/src/: apple_auth.rs  database.rs  download_manager.rs  ipa_handler.rs  ipa_utils.rs  lib.rs  main.rs  models.rs  signature.rs  web_jobs.rs
src/: App.vue  main.js  style.css  tokens.css
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
(+90 files in other folders)
