[package]
name = "ipa-wasm"
version = "0.1.0"
edition = "2021"
description = "IPA inspect / sinf inject / iTunesMetadata write / OTA manifest generators for the browser (WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
plist = "1.5"
base64 = "0.21"
zip = { version = "2.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# Disable wasm-opt because we can't download binaryen in this sandbox.
# `opt-level = "s"` + LTO already gives a reasonably small bundle.
wasm-opt = false

