[package]
name = "ipa-webtool-services"
version = "2.4.1"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-multipart = "0.6"
rusqlite = { version = "0.29", features = ["bundled", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking", "stream"] }
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8"
plist = "1.5"
tokio = { version = "1.0", features = ["fs", "io-util", "full"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1.5"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
zip = "2.0"
hex = "0.4"
bcrypt = "0.17"
sha2 = "0.10"
base64 = "0.21"
chrono = { version = "0.4.38", features = ["serde"] }
urlencoding = "2.1"

# 锁定 time crate 版本，避免 edition2024 问题
time = { version = "=0.3.36", features = ["serde"] }